Edit fully website for Personalized

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,32 +2,15 @@
   <div class="container">
     <div class="wrapper">
       <div class="col-sm-6 footer-column">
-        <h3>About Beegit</h3>
-          <p>Team-based online writing software that removes barriers across your organization to create, edit and approve web content.</p>
+        <h3>About Website</h3>
+          <p>We are the team.</p>
       </div>
       <div class="col-sm-2 footer-column">
-        <h3>Company</h3>
+        <h3>Link</h3>
         <ul class="footer-links">
-          <li><a href="https://beegit.com" target="_blank">Visit beegit.com</a></li>
-          <li><a href="https://beegit.com/about" target="_blank">About Us</a></li>
-          <li><a href="https://beegit.com/contact" target="_blank">Request A Demo</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-2 footer-column">
-        <h3>Resources</h3>
-        <ul class="footer-links">
-          <li><a href="https://beegit.com/markdown-cheat-sheet" target="_blank">Markdown Cheat Sheet</a></li>
-          <li><a href="https://beegit.com/media-kit" target="_blank">Media Kit</a></li>
-          <li><a href="http://help.beegit.com" target="_blank">Help Docs</a></li>
-          <li><a href="http://blog.beegit.com/feed"><i class="fa fa-rss"></i> RSS Feed</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-2 footer-column">
-        <h3>Connect</h3>
-        <ul class="footer-links">
-          <li><a href="http://twitter.com/ProjectBeegit" target="_blank">Twitter</a></li>
-          <li><a href="https://www.facebook.com/ProjectBeegit?ref=stream" target="_blank">Facebook</a></li>
-          <li><a href="https://www.linkedin.com/company/5034523?trkInfo=tas%3Abeegit%2Cidx%3A1-1-1&trk=tyah" target="_blank">LinkedIn</a></li>
+          <li><a href="https://heroh396.github.io/about" target="_blank">About Us</a></li>
+          <li><a href="http://fb.com/yoloh3" target="_blank">Facebook</a></li>
+          <li><a href="https://www.linkedin.com/in/huy-hung-ho-6a320411a/" target="_blank">LinkedIn</a></li>
         </ul>
       </div>
     <div class="col-sm-12">
