--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,11 +18,11 @@
               <!-- <li{% if page.url contains 'markdown' %} class="active"{% endif %}><a href="/markdown">Markdown</a></li>
               <li{% if page.url contains 'platform' %} class="active"{% endif %}><a href="/platform">Platform</a></li> -->
               <li>
-                <a href="https://beegit.com/contact" target="_blank">Request A Demo</a>
+                <a href="https://heroh396.github.io/about" target="_blank">About me</a>
               </li>
-              <li>
+              <!--li>
                 <a class="orange" href="https://beegit.com" target="_blank">Visit beegit.com</a>
-              </li>
+              </li-->
            </ul>
         </div>
       </div>
@@ -39,12 +39,12 @@
         <div class="col-xs-9 hidden-xs">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a class="blue" href="https://beegit.com/contact" target="_blank">Take control of your content production process</>
+              <a class="blue" href="https://heroh396.github.io/about" target="_blank">About me</>
             </li>
             <li>
-              <p class="navbar-btn">
+              <!--p class="navbar-btn">
                 <a href="https://beegit.com/contact" target="_blank" class="btn btn-primary">Request A Demo</a>
-              </p>
+              </p-->
             </li>
           </ul>
         <!-- <form class="navbar-form navbar-right" action='https://beegitbuzz.curated.co/email_subscribers' id='subscribe-form' method='post' style="margin-top: 16px; width: 100%; text-align: right">
