--- a/_layouts/landing_page.html
+++ b/_layouts/landing_page.html
@@ -39,8 +39,8 @@
     <div class="footer">
         <div class="container">
             <div class="col-sm-10 col-sm-offset-1 footer-column">
-              <h3>About Beegit</h3>
-                <p>Team-based online writing software that removes barriers across your organization to create, edit and approve web content.</p>
+              <h3>About Me</h3>
+                <p>We are the team.</p>
             </div>
           <div class="col-sm-10 col-sm-offset-1">
             <hr>
