--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-              <img alt="Brand" src="/assets/beegitBlogLogo.gif">
+              <img alt="Brand" src="/imgs/H3slogo.png">
             </a>
           </div>
           <div class="navbar-collapse collapse" id="navbar-collapse">
