--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
       <div>
         <div class="col-xs-3">
           <a class="navbar-brand" href="/">
-            <img alt="Brand" src="/assets/beegitBlogLogoPos.gif">
+            <img alt="Brand" src="/imgs/H3slogo.png">
           </a>
         </div>
         <div class="col-xs-9 hidden-xs">
