--- a/_includes/signup-block.html
+++ b/_includes/signup-block.html
@@ -1,4 +1,4 @@
-<div class="well well-signup text-center">
+<!-- <div class="well well-signup text-center">
   <div class="content-wrapper">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
@@ -15,4 +15,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
