--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,4 +1,4 @@
-<div class="social-share">
+<!--<div class="social-share">
   <div class="share">SHARE THIS</div>
   <a class="twitter" id="social-twitter"  href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ url }}&via=ProjectBeegit&hashtags={{ tagStr }}" onclick="window.open(this.href, 'child', 'scrollbars,width=650,height=500'); return false" title="Share this post on Twitter"><i class="fa fa-twitter"></i></a>
   <a class="facebook" id="social-facebook" href="https://www.facebook.com/sharer/sharer.php?t={{ page.title }}&u={{ url }}" onclick="window.open(this.href, 'child', 'scrollbars,width=650,height=500'); return false" title="Share this post on Facebook"><i class="fa fa-facebook"></i></a>
@@ -19,4 +19,4 @@
       document.body.appendChild(e);
     }
   </script>
-</div>
+</div> TODO-->
