--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="wrapper">
       <div class="col-sm-6 footer-column">
-        <h3>About Website</h3>
-          <p>We are the team.</p>
+        <h3>About website</h3>
+          <p>This blog share knowledge about linux, digital design, and learning english experiences.</p>
       </div>
       <div class="col-sm-2 footer-column">
         <h3>Link</h3>
