--- a/_layouts/landing_page.html
+++ b/_layouts/landing_page.html
@@ -39,8 +39,8 @@
     <div class="footer">
         <div class="container">
             <div class="col-sm-10 col-sm-offset-1 footer-column">
-              <h3>About Me</h3>
-                <p>We are the team.</p>
+              <h3>About website</h3>
+                <p>This blog share knowledge about linux, digital design, and learning english experiences.</p>
             </div>
           <div class="col-sm-10 col-sm-offset-1">
             <hr>
