--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
               <li{% if page.url contains 'digital_design' %} class="active"{% endif %}><a href="/digital_design">Digital Design</a></li>
               <li{% if page.url contains 'learn_english' %} class="active"{% endif %}><a href="/learn_english">Learn English</a></li>
               <li{% if page.url contains 'about' %} class="active"{% endif %}><a
-					  href="about.html">About me</a></li>
+					  href="/about.html">About me</a></li>
              <li>
                 <a href="https://heroh396.github.io/about" target="_blank">About me</a>
               </li>
