--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
             <img src="{{ author.gravatar }}">
               {% if author %}
               <div class="post-metadata">
-                By {{ author.name }}
+                by {{ author.name }}
                 <br />
                 {{ page.date | date: "%b %-d, %Y"}}
               </div>
