--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,26 @@ layout: default
     </div>
   </div>
 </div>
+
+<div class="container">
+  <div class="col-md-8 col-md-offset-2 post-content">
+      <div class="post-wrapper">
+          <article class="post-content">
+          <div class="post-wrapper-content">
+        	{{ content }}
+            {% if redirect_from %}
+            <div class="post-author">
+              <div class="post-author-details">
+				  Tags: {{post.redirect_from}}
+              </div>
+            </div>
+            {% endif %}
+        </div>
+      </article>
+    </div>
+  </div>
+</div>
+
 <div class="container">
   <div class="col-md-8 col-md-offset-2 post-content">
       <div class="post-wrapper">
@@ -63,6 +83,7 @@ layout: default
     </div>
   </div>
 </div>
+
 <div class="container">
   <div class="col-md-12">
     <h2 class="recent-header">Recent Posts</h2>
