--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
               <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
               <li{% if page.url contains 'digital_design' %} class="active"{% endif %}><a href="/digital_design">Digital Design</a></li>
               <li{% if page.url contains 'learn_english' %} class="active"{% endif %}><a href="/learn_english">Learn English</a></li>
+              <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">About us</a></li>
            </ul>
         </div>
       </div>
