Change heroh396.github.io to {{{site.url}}

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,10 @@
       <div class="col-sm-2 footer-column">
         <h3>Link</h3>
         <ul class="footer-links">
-          <li><a href="https://heroh396.github.io/about" target="_blank">About Us</a></li>
+			<li><a href="{{ site.url }}/about" target="_blank">About Us</a></li>
           <li><a href="http://fb.com/yoloh3" target="_blank">Facebook</a></li>
           <li><a href="https://www.linkedin.com/in/huy-hung-ho-6a320411a/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://www.github.com/uetvn" target="_blank">Github</a></li>
         </ul>
       </div>
     <div class="col-sm-12">
