--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-              <img alt="Brand" src="https://heroh396.github.io/imgs/H3slogo.png"> </a>
+				<img alt="Brand" src="{{ site.url }}/imgs/H3slogo.png"> </a>
           </div>
           <div class="navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -28,12 +28,12 @@
       <div>
         <div class="col-xs-3">
           <a class="navbar-brand" href="/">
-            <img alt="Brand" src="https://heroh396.github.io/imgs/H3slogo.png "> </a>
+			  <img alt="Brand" src="{{ site.url }}/imgs/H3slogo.png "> </a>
         </div>
         <div class="col-xs-9 hidden-xs">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a class="blue" href="https://heroh396.github.io/about" target="_blank">About me</a>
+				<a class="blue" href="{{ site.url }}/about" target="_blank">About me</a>
             </li>
             <li>
               <!--p class="navbar-btn">
