edit _config to yoloh3 site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 			<li><a href="{{ site.url }}/about" target="_blank">About Us</a></li>
           <li><a href="http://fb.com/yoloh3" target="_blank">Facebook</a></li>
           <li><a href="https://www.linkedin.com/in/huy-hung-ho-6a320411a/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.github.com/uetvn" target="_blank">Github</a></li>
+          <li><a href="https://www.github.com/yoloh3" target="_blank">Github</a></li>
         </ul>
       </div>
     <div class="col-sm-12">
