--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,8 @@
     <div class="wrapper">
       <div class="col-sm-6 footer-column">
         <h3>About website</h3>
-          <p>This blog share knowledge about linux, digital design, and learning english experiences.</p>
+          <p>This blog has shared knowledge about Linux, digital design, and
+		  learning English experiences.</p>
       </div>
       <div class="col-sm-2 footer-column">
         <h3>Link</h3>
