--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,12 +3,11 @@
 	<hr>
 	<ul class="sidebar">
 	    <li{% if page.url == '/' %} class="active"{% endif %}><a href="/">All Posts</a></li>
-	    <li{% if page.url contains 'agile_content' %} class="active"{% endif %}><a href="/agile_content">Agile Content</a></li>
-	    <li{% if page.url contains 'markdown' %} class="active"{% endif %}><a href="/markdown">Markdown</a></li>
-	    <li{% if page.url contains 'using_beegit' %} class="active"{% endif %}><a href="/using_beegit">Using Beegit</a></li>
-	    <li{% if page.url contains 'new_features' %} class="active"{% endif %}><a href="/new_features">New Features</a></li>
-	    <li{% if page.url contains 'buzz' %} class="active"{% endif %}><a href="/buzz">Buzz</a></li>
+	    <li{% if page.url contains 'digital_design' %} class="active"{% endif %}><a href="/digital_design">Digital Design</a></li>
+	    <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
+	    <li{% if page.url contains 'learning_english' %} class="active"{% endif %}><a
+														  href="/learn_english">Learning English</a></li>
+	    <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">about</a></li>
 	</ul>
 	<hr>
-	<a href="http://blog.beegit.com/feed" class="subscribe"><i class="fa fa-rss"></i>RSS Feed</a>
 </div>
