--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,9 +5,9 @@
 	    <li{% if page.url == '/' %} class="active"{% endif %}><a href="/">All Posts</a></li>
 	    <li{% if page.url contains 'digital_design' %} class="active"{% endif %}><a href="/digital_design">Digital Design</a></li>
 	    <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
-	    <li{% if page.url contains 'learning_english' %} class="active"{% endif %}><a
-														  href="/learn_english">Learning English</a></li>
-	    <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">about</a></li>
+	    <li{% if page.url contains 'learning_english' %} class="active"{% endif %}><a href="/learn_english">Learning English</a></li>
+	    <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">About</a></li>
+	    <li{% if page.url contains 'diary' %} class="active"{% endif %}><a href="/diary">Diary</a></li>
 	</ul>
 	<hr>
 </div>
