--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,8 @@ layout: default
             <img src="{{ author.gravatar }}">
               {% if author %}
               <div class="post-metadata">
-				  by <a ref="{{ author.name }}" href="/about">{{ author.name }}</a>
+				  <!--by <a ref="{{ author.name }}" href="/about">{{ author.name }}</a> -->
+				  by  {{ author.name }}
                 <br />
                 {{ page.date | date: "%b %-d, %Y"}}
               </div>
