--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 		  learning English experiences.</p>
       </div>
       <div class="col-sm-2 footer-column">
-        <h3>Link</h3>
+        <h3>Contact</h3>
         <ul class="footer-links">
 			<li><a href="{{ site.url }}/about" target="_blank">About me</a></li>
           <li><a href="http://fb.com/yoloh3" target="_blank">Facebook</a></li>
