--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,7 @@ layout: default
                 <img src="{{ author.gravatar }}">
               </div>
               <div class="post-author-details">
-				  <h5>by <a href="https://plus.google.com/u/0/110032598276786643658?rel=author">{{ author.name }}</a></h5>
+				  <h5>by <a rel="author" href="https://plus.google.com/u/0/110032598276786643658?rel=author">{{ author.name }}</a></h5>
                 {{ author.details }}
               </div>
             </div>
