Resolves: Change name (digital_design -> soc, learning_english -> life) - Reason: Updating

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
     <div class="wrapper">
       <div class="col-sm-6 footer-column">
         <h3>About website</h3>
-          <p>This blog has shared knowledge about Linux, digital design, and
-		  learning English experiences.</p>
+          <p>I always want to share my experience, my life, my feeling to
+					everyone. Above all, I want to make friends with you.</p>
       </div>
       <div class="col-sm-2 footer-column">
         <h3>Contact</h3>
