--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,10 @@
           </div>
           <div class="navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
+              <li{% if page.url contains 'life'  %} class="active"{% endif %}><a href="/life">Life</a></li>
               <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
-              <li{% if page.url contains 'digital_design' %} class="active"{% endif %}><a href="/digital_design">Digital Design</a></li>
-              <li{% if page.url contains 'learn_english' %} class="active"{% endif %}><a href="/learn_english">Learn English</a></li>
-              <li{% if page.url contains 'about' %} class="active"{% endif %}><a
-					  href="/about">About me</a></li>
+              <li{% if page.url contains 'SOC'   %} class="active"{% endif %}><a href="/soc">SOC</a></li>
+              <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">About me</a></li>
            </ul>
         </div>
       </div>
@@ -36,18 +35,7 @@
             <li>
 				<a class="blue" href="{{ site.url }}/about" target="_blank">About me</a>
             </li>
-            <li>
-              <!--p class="navbar-btn">
-                <a href="https://beegit.com/contact" target="_blank" class="btn btn-primary">Request A Demo</a>
-              </p-->
-            </li>
           </ul>
-        <!-- <form class="navbar-form navbar-right" action='https://beegitbuzz.curated.co/email_subscribers' id='subscribe-form' method='post' style="margin-top: 16px; width: 100%; text-align: right">
-          <div class="form-group" style="width: 60%;">
-              <input class="form-control" style="width: 100%;" id='subscribe-email' name='email' type='email' placeholder="Join our newsletter - enter your email."/>
-          </div>
-          <input type='submit' class="btn btn-primary" onclick="this.form.submit(); this.disabled=true; this.value='Sending...';" value='Subscribe'/ style="margin-left: 10px; margin-right: 0;">
-        </form> -->
       </div>
       <div class="col-md-9 mobile-nav">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
