--- a/_layouts/landing_page.html
+++ b/_layouts/landing_page.html
@@ -40,8 +40,7 @@
         <div class="container">
             <div class="col-sm-10 col-sm-offset-1 footer-column">
               <h3>About website</h3>
-                <p>This blog has shared knowledge about Linux, digital design,
-				and learning English experiences.</p>
+                <p>I always want to share my feelling, my experience, my life. Above all, I want to make friends with everyone in the world.</p>
             </div>
           <div class="col-sm-10 col-sm-offset-1">
             <hr>
