--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,9 @@
       <div class="col-sm-2 footer-column">
         <h3>Contact</h3>
         <ul class="footer-links">
-			<li><a href="{{ site.url }}/about" target="_blank">About me</a></li>
+					<li><a href="{{ site.url }}/about" target="_blank">About me</a></li>
+          <li><a href="https://github.com/yoloh3" target="_blank">Github</a></li>
           <li><a href="http://fb.com/yoloh3" target="_blank">Facebook</a></li>
-          <li><a href="https://www.linkedin.com/in/huy-hung-ho-6a320411a/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.github.com/yoloh3" target="_blank">Github</a></li>
         </ul>
       </div>
     <div class="col-sm-12">
