--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: default
         	{{ content }}
             {% include signup-block.html %}
 
-            {% if comment %}
+            {% if comments %}
 							<div class="just-comments" data-apikey="771a9fa5-2e14-42a7-a5cc-57e6b37ea126" ></div>
 							<script async src="https://just-comments.com/w.js"></script>
             {% endif %}
