--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,8 +40,10 @@ layout: default
           <div class="post-wrapper-content">
         	{{ content }}
             {% include signup-block.html %}
-						<div class="just-comments" data-apikey="771a9fa5-2e14-42a7-a5cc-57e6b37ea126" ></div>
-						<script async src="https://just-comments.com/w.js"></script>
+						{% if page.comments == 'true' %}
+							<div class="just-comments" data-apikey="771a9fa5-2e14-42a7-a5cc-57e6b37ea126" ></div>
+							<script async src="https://just-comments.com/w.js"></script>
+						{% endif %}
         </div>
       </article>
     </div>
