--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,8 +41,13 @@ layout: default
         	{{ content }}
             {% include signup-block.html %}
 						{% if page.comments == true %}
-							<div class="just-comments" data-apikey="771a9fa5-2e14-42a7-a5cc-57e6b37ea126" ></div>
-							<script async src="https://just-comments.com/w.js"></script>
+
+             	<div id="disqus_thread"></div>
+             	<script>
+             	(function() { // DON'T EDIT BELOW THIS LINE var d = document, s = d.createElement('script'); s.src = 'https://yoloh3.disqus.com/embed.js'; s.setAttribute('data-timestamp', +new Date()); (d.head || d.body).appendChild(s); })();
+             	</script>
+             	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 						{% endif %}
         </div>
       </article>
