--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,13 +3,13 @@
     <div class="wrapper">
       <div class="col-sm-6 footer-column">
         <h3>About website</h3>
-          <p>I always want to share my experience, my life, my feeling to
-					everyone. Above all, I want to make friends with you.</p>
+          <p>Welcome to H3's website. This is where my experience, my feelings, my life... things that I want to share with you. Glad to see you here, my friend.</p>
       </div>
       <div class="col-sm-2 footer-column">
         <h3>Contact</h3>
         <ul class="footer-links">
 					<li><a href="{{ site.url }}/about" target="_blank">About me</a></li>
+          <li><a href="https://www.linkedin.com/in/yoloh3" target="_blank">Linkedln</a></li>
           <li><a href="https://github.com/yoloh3" target="_blank">Github</a></li>
           <li><a href="http://fb.com/yoloh3" target="_blank">Facebook</a></li>
         </ul>
