--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li{% if page.url contains 'life'  %} class="active"{% endif %}><a href="/life">Life</a></li>
               <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
-              <li{% if page.url contains 'SOC'   %} class="active"{% endif %}><a href="/soc">SOC</a></li>
+              <li{% if page.url contains 'SOC'   %} class="active"{% endif %}><a href="/soc">Semicon</a></li>
               <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">About me</a></li>
            </ul>
         </div>
