Updated layout for google search console

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         {{ content }}
       </div>
     </div>
-  {% include footer.html %}    
+    {% include footer.html %}    
+    <meta name="google-site-verification" content="gWkyCtg36HZ6Y6-vNJWaJyDtvs58qhKSehw00EEyT4o" />
   </body>
 </html>
