Updated layout for google search console

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
-		<meta name="msvalidate.01" content="25E5C963F404CE81FC5F850519203B0D" />
+    <meta name="google-site-verification" content="ZABsvo6CzwwlUUZbRDfynoKhPunDMBPdXqQfImKy8xA" />
+    <meta name="msvalidate.01" content="25E5C963F404CE81FC5F850519203B0D" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
