--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta name="google-site-verification" content="ZABsvo6CzwwlUUZbRDfynoKhPunDMBPdXqQfImKy8xA" />
     <meta property="og:image" content="https://yoloh3.com/imgs/logo/H3_logo.PNG" />
-    <meta property="twitter:image" content="https://yoloh3.com/imgs/logo/h3_logo.PNG" />
+    <meta property="twitter:image" content="https://yoloh3.com/imgs/logo/H3_logo.PNG" />
     <meta name="msvalidate.01" content="25E5C963F404CE81FC5F850519203B0D" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
