--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,10 @@
 <head>
     <meta name="google-site-verification" content="ZABsvo6CzwwlUUZbRDfynoKhPunDMBPdXqQfImKy8xA" />
-    <meta property='og:title' content='All the best experiences in my world! - Yoloh3'/>
+    <meta property='og:title' content="All the best experiences in my world! - Yoloh3"/>
     <meta property="og:image" content="https://yoloh3.com/imgs/logo/H3_logo.PNG" />
-    <meta property='og:description' content='I always want to share my feelling, my experience, my life. Above all, I want to make friends with everyone in the world.' />
-    <meta property='og:url' content='htpps://yoloh3.com' />
+    <meta property='og:description' content="I always want to share my feelling, my experience, my life. Above all, I want to make friends with everyone in the world." />
+    <meta property='og:url' content="htpps://yoloh3.com" />
+    <meta property='og:type' content="article" />
     <meta name="msvalidate.01" content="25E5C963F404CE81FC5F850519203B0D" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
