--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,4 +1,21 @@
 <div class="social-share">
+  {% if page.is_post %}
+    {% assign type = "article" %}
+  {% else %}
+    {% assign type = "website" %}
+  {% endif %}
+  <meta property="og:type" content="{{ type }}" />
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.description }}{% endif %}" />
+  {% if page.image %}
+    <meta property="og:image" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}{{ page.image.path }}" />
+    <meta property="og:image:width" content="{{ page.image.width }}" />
+    <meta property="og:image:height" content="{{ page.image.height }}" />
+  {% endif %}
+  {% if page.is_post %}
+    <meta property="og:site_name" content="{{ site.title }}" />
+  {% endif %}
   <div class="share">SHARE THIS</div>
 
   <a class="twitter" id="social-twitter"  href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ url }}&via=ProjectBeegit&hashtags={{ tagStr }}" onclick="window.open(this.href, 'child', 'scrollbars,width=650,height=500'); return false" title="Share this post on Twitter"><i class="fa fa-twitter"></i></a>
