--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -7,7 +7,7 @@
   <meta property="og:type" content="{{ type }}" />
   <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
-  <meta property="og:description" content="{% if page.teaser %}{{ page.teaser | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.description }}{% endif %}" />
+  <meta property="og:description" content="{% if include.p.teaser % %}{{ include.p.teaser | strip_html | strip_newlines | truncate: 140 }}{% else %}{{ site.description }}{% endif %}" />
   {% if page.image %}
     <meta property="og:image" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}{{ page.image.path }}" />
     <meta property="og:image:width" content="{{ page.image.width }}" />
