--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
     <meta name="google-site-verification" content="ZABsvo6CzwwlUUZbRDfynoKhPunDMBPdXqQfImKy8xA" />
     <meta name="msvalidate.01" content="25E5C963F404CE81FC5F850519203B0D" />
     <meta property="og:image" content="https://yoloh3.com/imgs/logo/H3_logo.PNG" />
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=841948420148333&autoLogAppEvents=1" nonce="niUvYt23"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
