--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ layout: default
             {% include signup-block.html %}
 						{% if page.comments %}
 
-						<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="" data-numposts="15"></div>
+                        <div class="fb-comments" data-href="https://yoloh3.com" data-width="" data-numposts="5"></div>
 
 						{% endif %}
         </div>
