Log: update blog structure

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,8 @@
 	<ul class="sidebar">
 	    <li{% if page.url == '/' %} class="active"{% endif %}><a href="/">All Posts</a></li>
 	    <li{% if page.url contains 'life' %} class="active"{% endif %}><a href="/life">Life</a></li>
-	    <li{% if page.url contains 'SOC' %} class="active"{% endif %}><a href="/SOC">Semicon</a></li>
-	    <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
+	    <li{% if page.url contains 'work' %} class="active"{% endif %}><a href="/work">Work</a></li>
+	    <li{% if page.url contains 'soc' %} class="active"{% endif %}><a href="/soc">Semicon</a></li>
 	    <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">About</a></li>
 	    <li{% if page.url contains 'diary' %} class="active"{% endif %}><a href="/diary">Diary</a></li>
 	</ul>
