--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,8 @@
           <div class="navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li{% if page.url contains 'life'  %} class="active"{% endif %}><a href="/life">Life</a></li>
-              <li{% if page.url contains 'linux' %} class="active"{% endif %}><a href="/linux">Linux</a></li>
-              <li{% if page.url contains 'SOC'   %} class="active"{% endif %}><a href="/soc">Semicon</a></li>
+              <li{% if page.url contains 'work' %} class="active"{% endif %}><a href="/work">Work</a></li>
+              <li{% if page.url contains 'soc'   %} class="active"{% endif %}><a href="/soc">Semicon</a></li>
               <li{% if page.url contains 'about' %} class="active"{% endif %}><a href="/about">About me</a></li>
            </ul>
         </div>
